# clawos

./: .env.example  .gitignore  Cargo.toml  ClawOS_AI_TaskSpec_v1.docx  ClawOS_Comp_REPORT.txt  PROJECT_STATUS_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SKILLS.md  clawos_report.html  clawos_status_report.html
.cargo/: config.toml
.github/workflows/: build.yml  p2-gate.yml
P2-Engine/: P2_Readme.txt  ci.yml  config.toml  crypto.rs  lib.rs  main.rs  memory.rs  mod.rs  search.rs  tool_registry.rs  vault.rs
P2-Engine/mnt/user-data/outputs/crates/clawos-agent/src/ipc/: mod.rs
P2-Engine/mnt/user-data/outputs/crates/clawos-agent/src/router/: mod.rs
P2-Engine/mnt/user-data/outputs/crates/clawos-agent/src/scheduler/: mod.rs
P2-Engine/mnt/user-data/outputs/crates/clawos-agent/src/worker/: mod.rs
P2-Engine/mnt/user-data/outputs/crates/clawos-ns/src/: lib.rs
Qwen3-tts/: ARCHITECTURE.md  SKILL.md
docs/: P3.1-tool-migration.md  P3.2-channels-repackaging.md  P3.3-postgres-migration.md  P3.4-identity-initialization.md  P3.5-prompt-injection-defense.md  P3.6-endpoint-allowlist.md  P3.7-llm-provider-bridge.md  P3.8-secrets-key-init.md  P4.1-seccomp-pruning.md  P4.2-cgroup-calibration.md  P4.3-ebpf-ringbuffer-tuning.md  P4.4-wasm-tuning.md  P4.5-clawfs-hnsw-tuning.md  P4.6-apparmor-refinement.md  P4.7-xdp-performance.md  P4.8-integration-security-report.md  TELEGRAM_BOT_SETUP.md  TELEGRAM_QUICKSTART.md
domains/core-dev/: Cargo.toml
domains/core-dev/src/: agent_loop_service.rs  channels.rs  clawfs.rs  error.rs  ipc.rs  lib.rs  public_api.rs  security.rs
domains/ebpf/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build.rs
domains/ebpf/src/: events.rs  main.rs
domains/ebpf/src/bpf/: main.bpf.rs  main.rs
domains/filesystem/: Cargo.toml  README.md
domains/filesystem/src/: clawfs.rs  encryption.rs  error.rs  identity.rs  lib.rs  migration.rs  path.rs  vector.rs
domains/infra/src/: calibration.rs
domains/observability/src/: calibration.rs  lib.rs
domains/security/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
domains/security/examples/: seccomp_filter.rs  whitelist.json
domains/security/src/: apparmor_generator.rs  config.rs  error.rs  lib.rs  namespace_isolator.rs  seccomp_calibrator.rs  seccomp_filter.rs
domains/wasm/: Cargo.toml  README.md
domains/wasm/src/: bridge.rs  cgroup_manager.rs  error.rs  lib.rs  resource.rs  security.rs  tools.rs
kernel/: generate-kernel-config.sh
scripts/: align_md_tables.py  build.sh  quick-build.sh  telegram_bot.py  telegram_setup.sh
specs/p1/: P1.1-wit-interface-spec.md  P1.2-seccomp-whitelist.example.json  P1.2-seccomp-whitelist.schema.json  P1.3-ebpf-event-structs.md  P1.4-clawfs-spec.md  P1.5-cgroup-quotas.json  P1.6-apparmor-rules.md  P1.7-ipc-protocol.md  P1.8-public-api.md  README-P1.2.md
src/: Cargo.toml  main.rs
vault/: manifest-p1.json
wit/: clawos_ipc.wit  clawos_kernel.wit  clawos_tool.wit
