# ClawOS Workspace
# Main entry point and domain crates configuration

[workspace]
members = [
    # Main binary (daemon entry point)
    "src",
    
    # Domain crates
    # Re-enabled eBPF with fixed build.rs
    "domains/ebpf",    # P2.3
    "domains/wasm",      # P2.6
    "domains/filesystem", # P2.7
    "domains/core-dev",  # P2.5
    "domains/security",  # P2.2, P2.4, P2.8
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
license = "Apache-2.0 OR MIT"
authors = ["ClawOS Project"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
