[package]
name = "clawos-security"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ClawOS Project"]
license = "Apache-2.0 OR MIT"
description = "Security primitives for ClawOS: seccomp-BPF filtering, namespace isolation, and AppArmor integration"
repository = "https://github.com/clawos/clawos"
keywords = ["seccomp", "security", "bpf", "linux", "sandbox"]
categories = ["os::linux-apis", "api-bindings"]

[dependencies]
# seccomp-BPF bindings (Rust crate version - distinct from libseccomp C library)
libseccomp = "0.4"

# Linux syscall bindings
libc = "0.2"

# Linux-specific API bindings
nix = { version = "0.29", features = ["user", "fs", "process", "hostname"] }

# JSON parsing and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Regex for validation
regex = "1.10"

# Logging
log = "0.4"

# Async runtime support (for tokio compatibility)
tokio = { version = "1.40", features = ["full"], optional = true }

[dev-dependencies]
# Testing
tempfile = "3.12"

[features]
default = []
tokio = ["dep:tokio"]

[lib]
name = "clawos_security"
path = "src/lib.rs"

[[example]]
name = "seccomp_filter"
path = "examples/seccomp_filter.rs"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
